--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -19,6 +19,14 @@
         left: 50%;
         transform: translateX(-50%);
     }
+
+    #page-search-results .cards {
+        grid-template-columns: 1fr;
+    }
+
+    #page-search-results .cards img {
+        height: 250px;
+    }
 }
 
 @media(min-width: 1700px){
