--- a/public/styles/modal.css
+++ b/public/styles/modal.css
@@ -92,3 +92,15 @@
 #modal.hide {
     display: none;
 }
+
+/* Isto eh para o modal point-created */
+#modal.point .content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#modal.point h1{
+    color: white;
+    margin-top: 32px;
+}
