--- a/src/views/create-point.html
+++ b/src/views/create-point.html
@@ -8,12 +8,13 @@
 
 {% block styles %}
     <link rel="stylesheet" href="/styles/create-point.css">
+    <link rel="stylesheet" href="/styles/modal.css">
 {% endblock styles %}
 
 {% block content %}
     {%include "partials/page-header.html"%}
 
-    <form action="">
+    <form action="/savepoint", method="POST">
 
         <h1>Cadastro do ponto de coleta</h1>
 
@@ -52,7 +53,7 @@
 
             <div class="field-group">
                 <div class="field">
-                    <label for="state">Estado</label>
+                    <label for="uf">Estado</label>
                     <select name="uf" required="required">
                         <option value="">Selecione o Estado</option>
                     </select>
@@ -78,32 +79,32 @@
             </legend>
 
             <div class="items-grid">
-                <li data-id="1">
+                <li data-id=" Lâmpadas">
                     <img src="/assets/lampadas.svg" alt="Lâmpadas">
                     <span>Lâmpadas</span>
                 </li>
 
-                <li data-id="2">
+                <li data-id=" Pilhas e Baterias">
                     <img src="/assets/baterias.svg" alt="Pilhas e Baterias">
                     <span>Pilhas e Baterias</span>
                 </li>
 
-                <li data-id="3">
+                <li data-id=" Papeis e Papelão">
                     <img src="/assets/papeis-papelao.svg" alt="Papeis e Papelão">
                     <span>Papeis e Papelão</span>
                 </li>
 
-                <li data-id="4">
+                <li data-id=" Resíduos Eletrônicos">
                     <img src="/assets/eletronicos.svg" alt="Resíduos Eletronicos">
                     <span>Resíduos Eletrônicos</span>
                 </li>
 
-                <li data-id="5">
+                <li data-id=" Resíduos Orgânicos">
                     <img src="/assets/organicos.svg" alt="Resíduos Orgânicos">
                     <span>Resíduos Orgânicos</span>
                 </li>
 
-                <li data-id="6">
+                <li data-id=" Óleo de cozinha">
                     <img src="/assets/oleo.svg" alt="Óleo de cozinha">
                     <span>Óleo de cozinha</span>
                 </li>
@@ -116,9 +117,20 @@
 
     </form>
 
+    
+    
 {% endblock content %}
 
-{% block scripts %}
+{% block modal %}
+    {% if saved %}
+            {%include "partials/point-created.html"%}
+        {% endif %}
+    {% endblock modal %}
+    {% if saved %}
+            {%include "partials/point-created.html"%}
+        {% endif %}
+
+    {% block scripts %}
     <script src="/scripts/create-point.js"></script>
 {% endblock scripts %}
 
