--- a/src/views/search-results.html
+++ b/src/views/search-results.html
@@ -13,38 +13,38 @@
     {%include "partials/page-header.html"%}
 
     <main>
-        <h4>
-            <strong>2 pontos</strong>
-            encontrados
-        </h4>
+        {% if total > 0 %}
+            <h4>
+                <strong>{{total}} pontos</strong>
+                encontrados
+            </h4>
 
-        <div class="cards">
-            <div class="card">
-                <img src="https://images.unsplash.com/photo-1528323273322-d81458248d40?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1101&q=80" alt="Colectoria">
-                <h1>Colectoria</h1>
-                <h3>Resíduos Eletrônicos, Lâmpadas</h3>
-                <p>
-                    Rio do Sul, Santa Catarina
-                    <br/>
-                    Guilherme Gemballa, Jardim América
-                    <br/>
-                    Número 260
-                </p>
+            <div class="cards">
+            
+                {% for point in points %}
+                    <div class="card">
+                        <img src="{{point.image}}" alt="{{point.name}}">
+                        <h1>{{point.name}}</h1>
+                        <h3>{{point.items}}</h3>
+                        <p>
+                            {{point.city}}, {{point.state}}
+                            <br/>
+                            {{point.address}}
+                            <br/>
+                            {{point.address2}}
+                        </p>
+                    </div>
+                {% endfor %}
             </div>
+            
+        {% else %}
+            <h4><strong>Nenhum</strong> ponto encontrado</h4>
+        {% endif %}
+            
 
-            <div class="card">
-                <img src="https://images.unsplash.com/photo-1536939459926-301728717817?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=400&q=60" alt="Papersider">
-                <h1>Papersider</h1>
-                <h3>Papéis e Papelão</h3>
-                <p>
-                    Rio do Sul, Santa Catarina
-                    <br/>
-                    Guilherme Gemballa, Jardim América
-                    <br/>
-                    Número 260
-                </p>
-            </div>
-        </div>
+
+            
+       
     </main>
 
 {% endblock content %}
